# rest-rpc

./: README.md  main.py  pyproject.toml  typed_rest.py
.github/workflows/: publish.yaml  run_tests.yaml
benchmark/: bench.py  plot.py  pyproject.toml  runtimes.json
docs/: pyproject.toml
examples/simple/: README.md  client.py  client_async.py  client_sync.py  my_api.py  pyproject.toml
examples/upgraded/: client_async.py  client_sync.py  main.py  my_api.py  pyproject.toml
examples/webapp/: README.md  pyproject.toml
examples/webapp/static/: pyscript.toml
src/rest_rpc/: __init__.py  api_client.py  api_definition.py  api_implementation.py  request_params.py
src/typed_rest/: __init__.py
tests/: conftest.py  pyproject.toml  test_api_client.py  test_api_client_async_custom_transport.py  test_api_client_custom.py  test_api_client_custom_transport.py  test_api_client_custom_with_aiohttp.py  test_api_client_custom_with_testclient.py  test_api_client_engines_sync.py  test_api_client_errors.py  test_api_client_mapping.py  test_api_client_requests.py  test_api_definition.py  test_api_implementation.py  test_client_validation_error.py  test_custom_transport_headers_body_query.py  test_header_alias.py  test_headers_basic.py  test_headers_underscore_conversion.py  test_missing_header_422.py  test_mixed_params_all_kinds.py
