[project]
name = "typed-rest-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "typed-rest[fastapi,requests,aiohttp,httpx,urllib3]>=0.1.0",
]

[tool.uv.sources]
typed-rest = { workspace = true }
